Lint fixes