@@ -2,6 +2,7 @@ package io.github.rlshep.bjcp2015beerstyles;
 
 import android.content.Intent;
 import android.os.Bundle;
+import android.support.annotation.NonNull;
 import android.support.v7.app.AppCompatActivity;
 import android.support.v7.widget.Toolbar;
 import android.text.Html;
@@ -51,7 +52,7 @@ public class SubCategoryBodyActivity extends AppCompatActivity {
     }
 
     @Override
-    public boolean dispatchTouchEvent(MotionEvent event) {
+    public boolean dispatchTouchEvent(@NonNull MotionEvent event) {
         boolean eventReturn;
         boolean eventConsumed = gestureDetector.onTouchEvent(event);
 
@@ -150,8 +151,8 @@ public class SubCategoryBodyActivity extends AppCompatActivity {
     private void loadSubCategoryBody(SubCategory subCategory) {
         Intent i = new Intent(this, SubCategoryBodyActivity.class);
 
-        i.putExtra("CATEGORY_ID", (new Long(subCategory.get_categoryId())).toString());
-        i.putExtra("SUB_CATEGORY_ID", (new Long(subCategory.get_id())).toString());
+        i.putExtra("CATEGORY_ID", (Long.valueOf(subCategory.get_categoryId())).toString());
+        i.putExtra("SUB_CATEGORY_ID", (Long.valueOf(subCategory.get_id())).toString());
         i.putExtra("SUB_CATEGORY", subCategory.get_subCategory());
         i.putExtra("SUB_CATEGORY_NAME", subCategory.get_name());
         i.setFlags(Intent.FLAG_ACTIVITY_NO_HISTORY);
